<?xml version="1.0"?>
<package>
    <name>see3cam_10cug</name>
    <version>0.2.0</version>
    <description>
        A collection of node(let)s that stream images from USB cameras (UVC)
        and provide CameraInfo messages to consumers. Included a modified 
        see3cam driver that works with a stereo setup of the 10cug_m cameras 
        with their hardware triggers wired.
    </description>

    <maintainer email="paul.c.sammut@gmail.com">Paul Sammut</maintainer>
    <author email="paul.c.sammut@gmail.com">Paul Sammut</author>

    <license>GPLv2</license>

    <url type="website">http://ros.org/wiki/see3cam</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>camera_info_manager</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>camera_info_manager</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>sensor_msgs</run_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_uvc_camera.xml"/>
    </export>
</package>
